@@ -1,5 +1,6 @@
 package org.esupportail.esupsignature.config.security;
 
+import org.esupportail.esupsignature.config.GlobalProperties;
 import org.esupportail.esupsignature.config.security.cas.CasProperties;
 import org.esupportail.esupsignature.config.security.otp.OtpAuthenticationProvider;
 import org.esupportail.esupsignature.config.security.shib.DevClientRequestFilter;
@@ -12,7 +13,6 @@ import org.esupportail.esupsignature.service.security.shib.ShibSecurityServiceIm
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.autoconfigure.security.oauth2.client.ClientsConfiguredCondition;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
@@ -22,10 +22,15 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.core.annotation.Order;
 import org.springframework.ldap.core.support.LdapContextSource;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.builders.WebSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.session.SessionRegistryImpl;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.oauth2.client.web.OAuth2AuthorizationRequestRedirectFilter;
@@ -46,12 +51,17 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 	private static final Logger logger = LoggerFactory.getLogger(WebSecurityConfig.class);
 
+	private final String apiKey = "SomeKey1234567890";
+
 	private LdapContextSource ldapContextSource;
 
 	@Autowired(required = false)
 	public void setLdapContextSource(LdapContextSource ldapContextSource) {
 		this.ldapContextSource = ldapContextSource;
 	}
+
+	@Resource
+	private GlobalProperties globalProperties;
 
 	@Resource
 	private WebSecurityProperties webSecurityProperties;
@@ -102,6 +112,13 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 	}
 
 	@Override
+	public void configure(WebSecurity web) throws Exception {
+		super.configure(web);
+		web.ignoring().mvcMatchers("/resources/**", "/webjars/**");
+	}
+
+
+	@Override
 	protected void configure(HttpSecurity http) throws Exception {
 		setAuthorizeRequests(http);
 		http.antMatcher("/**").authorizeRequests().antMatchers("/").permitAll();
@@ -115,12 +132,14 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 				http.oauth2Client();
 			}
 		}
-		for(SecurityService securityService : securityServices) {
-			if(securityService instanceof CasSecurityServiceImpl) {
-				switchUserFilter().setUserDetailsService(securityService.getUserDetailsService());
-			} else if(securityService instanceof ShibSecurityServiceImpl) {
-				switchUserFilter().setUserDetailsService(securityService.getUserDetailsService());
-				break;
+		if(globalProperties.getEnableSu()) {
+			for (SecurityService securityService : securityServices) {
+				if (securityService instanceof CasSecurityServiceImpl) {
+					switchUserFilter().setUserDetailsService(securityService.getUserDetailsService());
+				} else if (securityService instanceof ShibSecurityServiceImpl) {
+					switchUserFilter().setUserDetailsService(securityService.getUserDetailsService());
+					break;
+				}
 			}
 		}
 		http.logout()
@@ -141,6 +160,33 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 		http.headers().disable();
 	}
 
+	@Bean
+	public APIKeyFilter apiKeyFilter() {
+		APIKeyFilter filter = new APIKeyFilter();
+		filter.setAuthenticationManager(authentication -> {
+			if(authentication.getPrincipal() == null) {
+				throw new BadCredentialsException("Access Denied.");
+			}
+			String apiKey = (String) authentication.getPrincipal();
+			if (authentication.getPrincipal() != null && this.apiKey.equals(apiKey)) {
+				Collection<SimpleGrantedAuthority> oldAuthorities = (Collection<SimpleGrantedAuthority>) SecurityContextHolder.getContext().getAuthentication().getAuthorities();
+				SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_WS");
+				List<SimpleGrantedAuthority> updatedAuthorities = new ArrayList<>();
+				updatedAuthorities.add(authority);
+				updatedAuthorities.addAll(oldAuthorities);
+				SecurityContextHolder.getContext().setAuthentication(
+						new UsernamePasswordAuthenticationToken(
+								SecurityContextHolder.getContext().getAuthentication().getPrincipal(),
+								SecurityContextHolder.getContext().getAuthentication().getCredentials(),
+								updatedAuthorities));
+				return SecurityContextHolder.getContext().getAuthentication();
+			} else {
+				throw new BadCredentialsException("Access Denied.");
+			}
+		});
+		return filter;
+	}
+
 	private void setAuthorizeRequests(HttpSecurity http) throws Exception {
 		http.logout().logoutSuccessUrl("/").permitAll();
 		AccessDeniedHandlerImpl accessDeniedHandlerImpl = new AccessDeniedHandlerImpl();
@@ -148,9 +194,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 		http.exceptionHandling().accessDeniedHandler(accessDeniedHandlerImpl);
 		String hasIpAddresses = "";
 		int nbIps = 0;
-		if(webSecurityProperties.getWsAccessAuthorizeIps() == null) {
-			hasIpAddresses = "	denyAll";
-		} else {
+		if(webSecurityProperties.getWsAccessAuthorizeIps() != null) {
 			for (String ip : webSecurityProperties.getWsAccessAuthorizeIps()) {
 				nbIps++;
 				hasIpAddresses += "hasIpAddress('"+ ip +"')";
@@ -158,18 +202,22 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 					hasIpAddresses += " or ";
 				}
 			}
+			http.authorizeRequests().antMatchers("/ws/**").access(hasIpAddresses);
+			http.authorizeRequests().antMatchers("/actuator/**").access(hasIpAddresses);
+//			http.authorizeRequests().antMatchers("/ws/**").access("hasRole('ROLE_WS')").and().addFilter(apiKeyFilter());
+		} else {
+			http.authorizeRequests().antMatchers("/ws/**").denyAll();
+			http.authorizeRequests().antMatchers("/actuator/**").denyAll();
 		}
-		http.authorizeRequests().antMatchers("/ws/**").access(hasIpAddresses);
-		http.authorizeRequests().antMatchers("/actuator/**").access(hasIpAddresses);
 		http.authorizeRequests().antMatchers("/otp/**").permitAll();
 		http.authorizeRequests().antMatchers("/error").permitAll();
 		http.authorizeRequests()
 				.antMatchers("/").permitAll()
 				.antMatchers("/admin/", "/admin/**").access("hasRole('ROLE_ADMIN')")
 				.antMatchers("/user/", "/user/**").access("hasAnyRole('ROLE_USER', 'ROLE_OTP')")
+				.antMatchers("/ws-secure/", "/ws-secure/**").access("hasAnyRole('ROLE_USER', 'ROLE_OTP')")
 				.antMatchers("/public/", "/public/**").permitAll()
-				.antMatchers("/h2-console/**").access("hasRole('ROLE_ADMIN')")
-				.antMatchers("/webjars/**").permitAll();
+				.antMatchers("/h2-console/**").access("hasRole('ROLE_ADMIN')");
 
 	}
 
@@ -185,19 +233,17 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 
 	@Bean
 	public ConcurrentSessionFilter concurrencyFilter() {
-		ConcurrentSessionFilter concurrentSessionFilter = new ConcurrentSessionFilter(sessionRegistry());
-		return concurrentSessionFilter;
+		return new ConcurrentSessionFilter(sessionRegistry());
 	}
 
 	@Bean
 	public RegisterSessionAuthenticationStrategy sessionAuthenticationStrategy() {
-		RegisterSessionAuthenticationStrategy authenticationStrategy = new RegisterSessionAuthenticationStrategy(sessionRegistry());
-		return authenticationStrategy;
+		return new RegisterSessionAuthenticationStrategy(sessionRegistry());
 	}
 
 	@Bean
 //	@ConditionalOnProperty({"spring.ldap.base", "ldap.search-base", "security.cas.service"})
-	@ConditionalOnExpression("${global.enable-su}")
+	@ConditionalOnProperty(value="global.enable-su",havingValue = "true")
 	public SwitchUserFilter switchUserFilter() {
 		SwitchUserFilter switchUserFilter = new SwitchUserFilter();
 		switchUserFilter.setUserDetailsService(new InMemoryUserDetailsManager());
@@ -211,13 +257,12 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 	@Bean
 	@Override
 	public AuthenticationManager authenticationManagerBean() {
-		return new ProviderManager(Arrays.asList(new OtpAuthenticationProvider()));
+		return new ProviderManager(List.of(new OtpAuthenticationProvider()));
 	}
 
 	@Bean
 	public UserDetailsService userDetailsService() {
-		InMemoryUserDetailsManager manager = new InMemoryUserDetailsManager();
-		return manager;
+		return new InMemoryUserDetailsManager();
 	}
 
 	@Bean
